<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/app_bar"
            android:elevation="0dp"
            app:elevation="0dp"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <androidx.appcompat.widget.Toolbar
                app:background="@color/transparent"
                app:titleTextColor="@color/textColor2nd"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:id="@+id/toolbar"/>
        </com.google.android.material.appbar.AppBarLayout>
        <LinearLayout
            android:id="@+id/sort_container"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            >
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:textColor="@color/textColor"
                app:buttonTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/name"
                android:id="@+id/sort_name"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:textColor="@color/textColor"
                app:buttonTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/rating"
                android:id="@+id/sort_rating"
                />

        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/order_container"
            app:layout_constraintTop_toBottomOf="@id/sort_container"
            >
            <TextView
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                app:buttonTint="@color/colorAccent"
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/ascending"
                android:id="@+id/order_asc"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                app:buttonTint="@color/colorAccent"
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/descending"
                android:id="@+id/order_desc"
                />
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/order_container"
            >
            <View
                android:layout_margin="16dp"
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@id/cancel_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cancel_container" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cancel_container"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:id="@+id/cancel"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/changes"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:id="@+id/applyChanges"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/done"
                        android:textAllCaps="false"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>