<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/app_bar"
            android:elevation="0dp"
            app:elevation="0dp"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize">
            <androidx.appcompat.widget.Toolbar
                app:background="@color/transparent"
                app:titleTextColor="@color/textColor2nd"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:id="@+id/toolbar"/>
        </com.google.android.material.appbar.AppBarLayout>
        <TextView
            android:visibility="gone"
            android:textColor="@color/textColor"
            android:layout_marginStart="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="Age"
            android:id="@+id/age_text"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:visibility="gone"
            android:layout_marginStart="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/min_max_container"
            app:layout_constraintTop_toBottomOf="@id/age_text"
            >
            <TextView
                android:id="@+id/min_seek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.rafslab.movie.dl.view.FilterSeekBar
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_marginStart="6dp"
                app:bar_color="@color/filter_seek_bar_color"
                app:bar_highlight_color="@color/filter_seek_bar_selected_color"
                app:corner_radius="5"
                app:data_type="_float"
                app:gap="10"
                app:max_value="100"
                app:min_value="0"
                app:left_thumb_color="@color/filter_pill_color"
                app:left_thumb_color_pressed="@color/filter_pill_selected_color"
                app:right_thumb_color="@color/filter_pill_color"
                app:right_thumb_color_pressed="@color/filter_pill_selected_color"
                android:id="@+id/seek_bar"
                app:layout_constraintStart_toEndOf="@id/min_seek"
                app:layout_constraintEnd_toStartOf="@id/max_seek"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:id="@+id/max_seek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:textAlignment="viewEnd"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/sort_container"
            android:padding="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/age_text"
            >
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:textColor="@color/textColor"
                app:buttonTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/male"
                android:id="@+id/sort_male"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:textColor="@color/textColor"
                app:buttonTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/female"
                android:id="@+id/sort_female"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                android:textColor="@color/textColor"
                app:buttonTint="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/all_cast"
                android:id="@+id/sort_all"
                />

        </LinearLayout>
        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/order_container"
            app:layout_constraintTop_toBottomOf="@id/sort_container"
            >
            <TextView
                android:textColor="@color/textColor"
                android:textSize="18sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order"
                />

            <com.google.android.material.radiobutton.MaterialRadioButton
                app:buttonTint="@color/colorAccent"
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/ascending"
                android:id="@+id/order_asc"
                />
            <com.google.android.material.radiobutton.MaterialRadioButton
                app:buttonTint="@color/colorAccent"
                android:textColor="@color/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/descending"
                android:id="@+id/order_desc"
                />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/order_container"
            >
            <View
                android:layout_margin="16dp"
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@id/cancel_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cancel_container" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cancel_container"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:id="@+id/cancel"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textAllCaps="false"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/changes"
                android:layout_width="0dp"
                android:layout_height="?actionBarSize"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:cardUseCompatPadding="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?selectableItemBackground"
                    android:id="@+id/applyChanges"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/done"
                        android:textAllCaps="false"
                        android:textAlignment="center"
                        android:textColor="@color/textColor"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>