<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_below="@id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintBottom_toTopOf="@id/btn_container"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginStart="12dp"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:textColor="@color/textColor"
                    android:layout_marginStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/status"
                    android:id="@+id/status_text"
                    app:layout_constraintTop_toTopOf="parent"
                    />
                <LinearLayout
                    android:layout_marginStart="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/status_container"
                    app:layout_constraintTop_toBottomOf="@id/status_text"
                    >
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/complete"
                        android:textColor="@color/textColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/colorAccent"
                        android:text="@string/complete"
                        />
                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/on_going"
                        android:textColor="@color/textColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:buttonTint="@color/colorAccent"
                        android:text="@string/on_going"
                        />

                </LinearLayout>

                <TextView
                    android:textColor="@color/textColor"
                    android:layout_marginStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/rating"
                    android:id="@+id/rating_text"
                    app:layout_constraintTop_toBottomOf="@id/status_container"
                    />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginStart="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/min_max_container"
                    app:layout_constraintTop_toBottomOf="@id/rating_text"
                    >
                    <TextView
                        android:id="@+id/min_seek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="viewStart"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <com.rafslab.movie.dl.view.FilterSeekBar
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="6dp"
                        android:layout_marginStart="6dp"
                        app:bar_color="@color/filter_seek_bar_color"
                        app:bar_highlight_color="@color/filter_seek_bar_selected_color"
                        app:corner_radius="5"
                        app:data_type="_float"
                        app:gap="10"
                        app:max_value="100"
                        app:min_value="0"
                        app:left_thumb_color="@color/filter_pill_color"
                        app:left_thumb_color_pressed="@color/filter_pill_selected_color"
                        app:right_thumb_color="@color/filter_pill_color"
                        app:right_thumb_color_pressed="@color/filter_pill_selected_color"
                        android:id="@+id/filter_rating"
                        app:layout_constraintStart_toEndOf="@id/min_seek"
                        app:layout_constraintEnd_toStartOf="@id/max_seek"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />
                    <TextView
                        android:id="@+id/max_seek"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:layout_marginTop="16dp"
                    android:textColor="@color/textColor"
                    android:layout_marginStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/categories"
                    android:id="@+id/categories_text"
                    app:layout_constraintTop_toBottomOf="@id/min_max_container"
                    />
                <ProgressBar
                    android:layout_marginTop="16dp"
                    android:id="@+id/progress_bar2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/categories_group"
                    app:layout_constraintEnd_toEndOf="@+id/categories_group"
                    app:layout_constraintStart_toStartOf="@+id/categories_group"
                    app:layout_constraintTop_toTopOf="@+id/categories_group"
                    />
                <com.google.android.material.chip.ChipGroup
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/categories_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:singleSelection="false"
                    android:id="@+id/categories_group"
                    />
                <TextView
                    android:layout_marginTop="16dp"
                    android:textColor="@color/textColor"
                    android:layout_marginStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="@string/tag"
                    android:id="@+id/tags_text"
                    app:layout_constraintTop_toBottomOf="@id/categories_group"
                    />
                <ProgressBar
                    android:layout_marginTop="16dp"
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@+id/tag_group"
                    app:layout_constraintEnd_toEndOf="@+id/tag_group"
                    app:layout_constraintStart_toStartOf="@+id/tag_group"
                    app:layout_constraintTop_toTopOf="@+id/tag_group"
                    />
                <com.google.android.material.chip.ChipGroup
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@id/tags_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:singleSelection="false"
                    android:id="@+id/tag_group"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/app_bar"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            app:elevation="0dp"
            android:layout_height="?actionBarSize">
            <androidx.appcompat.widget.Toolbar
                android:layout_toStartOf="@id/close_bottom_sheet"
                app:background="@color/transparent"
                app:titleTextColor="@color/textColor2nd"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:id="@+id/toolbar"/>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <View
                android:layout_margin="16dp"
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/textColor"
                app:layout_constraintBottom_toBottomOf="@id/cancel_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cancel_container" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cancel_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent">
                <Button
                    android:id="@+id/cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor" />
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/changes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider">
                <Button
                    android:id="@+id/done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?selectableItemBackground"
                    android:text="@string/done"
                    android:textAllCaps="false"
                    android:textColor="@color/textColor" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>
